# stephen-planetbarr-com

./: .ghci  README.org  clean_and_watch.sh  deploy.sh  index.html  newpost.hs  site.hs  stack.yaml  stephen-planetbarr-com.cabal
css/: bootstrap.css  layout.css  sjb.css
js/: alex.js
posts/: 2012-05-21-my-workflow-for-running-jobs.markdown  2012-05-28-using-r-to-solve-a-puzzle.markdown  2012-08-09-using-rinside-with-rcppeigen.markdown  2012-08-12-book-review-first-shift-legacy-by-hugh-howey.markdown  2012-08-12-compiling-openmpi-applications-with-rinside-and-rcppeigen-using-the-intel-c-plus-plus-compiler.markdown  2012-08-14-book-review-a-dot-i-apocalypse-by-william-hertling.markdown  2012-08-19-chocolate-cake-filled-oranges.markdown  2012-08-19-talk-review-bret-victor-inventing-on-principle.markdown  2012-08-20-talk-review-timothy-prestero-design-for-people.markdown  2012-08-20-the-setup.markdown  2012-08-26-machine-learning-course-via-coursera.markdown  2012-08-26-operations-research-and-management-science-handbook.markdown  2012-08-26-orms-ch1-linear-programming.markdown  2012-08-29-more-mixing-of-r-and-c-plus-plus.markdown  2012-09-10-currently-reading-optimal-lower-bounds-for-anonymous-scheduling-mechanisms.markdown  2012-09-10-simplex-algorithm-the-algorithm-that-runs-the-world.markdown  2012-09-16-probability-and-statistics-cookbook.markdown  2012-09-16-some-useful-probability-theorems.markdown  2012-09-17-paper-approximate-and-data-driven-dynamic-programming-for-queueing-networks.markdown  2012-10-03-some-science-fiction-reading.markdown  (+61 more)
templates/: nav.html  (+3 more)
(+6 files in other folders)
