name:                stephen-planetbarr-com
version:             0.1.0.0
synopsis:            Hakyll project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/stephen-planetbarr-com#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable stephen-planetbarr-com
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*
                     , filepath >= 1.4.0.0
                     , hakyll == 4.7.*
                     , pandoc  >= 0.16.0.2
                     , process >= 1.2.3.0
                     , text >= 1.2.2.0


executable newpost
  main-is:             newpost.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*
                     , filepath >= 1.4.0.0
                     , text >= 1.2.2.0
                     , text-format >= 0.3.1.1
                     , time >= 1.5.0.1